# Reflect

./: CMakeLists.txt  README.md
include/reflect/: Field.hpp  Method.hpp  Obj.hpp  Registeraction.hpp  Registry.hpp  single_include.hpp
include/reflect/detail/class/: ClassName.hpp  ClassRegistration.hpp  ClassRegistration.inl  ClassRegistry.hpp  Constructor.hpp  normal.hpp  normal.inl
include/reflect/detail/field/: Field.hpp  FieldRegistration.hpp  FieldRegistration.inl  FieldRegistry.hpp  FieldRegistry.inl
include/reflect/detail/json/: JSON_decl.hpp  dispatch.hpp  dispatch.inl  toJSON.hpp
include/reflect/detail/method/: Method.hpp  MethodRegistration.hpp  MethodRegistration.inl  MethodRegistry.hpp  MethodRegistry.inl
include/reflect/detail/object/: Obj.hpp  Obj.inl
include/reflect/detail/type/: Constructor.hpp  TypeName.hpp  TypeRegistration.hpp  TypeRegistration.inl  TypeRegistry.hpp  normal.hpp  normal.inl
src/: Obj.cpp  Registeraction.cpp  Registry.cpp
test/: Foo.cpp  Foo.hpp  main.cpp
